syntax = "proto3";
package dipstick.uds.v1;

import "google/protobuf/timestamp.proto";

// Session info.
message SessionInfo {
  // Session id.
  uint64 id = 1;
  // Timestamp when the session was opened.
  google.protobuf.Timestamp created_at = 2;
}
